<resources>
    <!--    Login-->
    <string name="app_name">Go4Lunch</string>
    <string name="login_background_subtitle">Find a nice restaurants and invite your co-workers for lunch !</string>
    <string name="go4lunch_title">Go4Lunch</string>

    <!--    Navigation drawer-->
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="app_logo_nav_drawer">app_logo_nav_drawer</string>
    <string name="nav_drawer_header_picture">nav_drawer_header_picture</string>
    <string name="search">search</string>
    <string name="first_name">first name</string>
    <string name="name">NAME</string>
    <string name="e_mail">e-mail address</string>
    <string name="user_picture">user_picture</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map_view">Map view</string>
    <string name="bottom_navigation_menu_list_view">List view</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="title_activity_maps">Map</string>

    <!--    RESTAURANT-->
    <string name="restaurant_image_item_list">restaurant_image_item_list</string>
    <string name="restaurant">Restaurant Name</string>
    <string name="origin">origin</string>
    <string name="address">address</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="hour">hour</string>
    <string name="meters">meters</string>
    <string name="x">(x)</string>
    <string name="star_3">star_3</string>
    <string name="star_2">star_2</string>
    <string name="star_one">star_one</string>
    <string name="restaurant_detail_image">restaurant_detail_image</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>

    <!--    WORKMATES-->
    <string name="is_eating">is eating</string>

<!--    &lt;!&ndash;    FACEBOOK &ndash;&gt;-->
<!--    <string name="facebook_application_id" translatable="false">3019484981460119</string>-->
<!--    <string name="facebook_login_protocol_scheme" translatable="false">fb3019484981460119</string>-->

    <!--    TWITTER-->
    <string name="twitter_consumer_key" translatable="false">3sI4Kl5kaQUagM1YfUU0gpKzU</string>
    <string name="twitter_consumer_secret" translatable="false">Yse7FKJOgqBouYhWsx0EErSNbkF71vyhSh15LMVbFKv3EpoNBJ</string>

    <!--    LOG IN-->
    <string name="connection_succeed">Connection succeed</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="error_no_internet">Error no internet</string>
    <string name="unknown_error">Unknown error</string>

<!--    GOOGLE MAPS-->
<!--    <string name="google_maps_api_key" translatable="false">AIzaSyA5AiL719efOapJiyfgf-RSBq7BN6FWDM4</string>-->

    <!--    OTHERS-->
    <string name="participation_btn_info_user_true">Good! You joined these workmates to eat.</string>
    <string name="participation_btn_info_user_false">You leave these workmates to eat.</string>
    <string name="available_workmates">Available workmates</string>
    <string name="i_m_hungry">I\'m hungry!</string>
    <string name="log_out_message">You have logged out</string>
    <string name="function_under_development">Function under development</string>
    <string name="error_permission_map">error permission location</string>
    <string name="no_restaurant_found">No restaurant around your position</string>


</resources>
