<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_list_view_item_profile"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_number_of_person_vote"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_distance_from_the_restaurant" />

    <ImageView
        android:id="@+id/fragment_list_view_item_star_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/star_one"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_restaurant_picture"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_profile" />

    <ImageView
        android:id="@+id/fragment_list_view_item_star_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/star_2"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_star_1"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_view_item_star_1" />

    <ImageView
        android:id="@+id/fragment_list_view_item_star_3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/star_3"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_star_2"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_view_item_star_1" />

    <ImageView
        android:id="@+id/fragment_list_view_item_restaurant_picture"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/restaurant_image_item_list"
        android:src="@drawable/ic_no_profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_list_view_item_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/restaurant"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_list_view_item_restaurant_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/origin"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_view_item_restaurant_name"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_restaurant_name" />

    <TextView
        android:id="@+id/fragment_list_view_item_restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_view_item_restaurant_type"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_restaurant_name" />

    <TextView
        android:id="@+id/fragment_list_view_item_open_or_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_view_item_restaurant_type"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_restaurant_type" />

    <TextView
        android:id="@+id/fragment_list_view_item_open_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/hour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_view_item_open_or_close"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_restaurant_address" />

    <TextView
        android:id="@+id/fragment_list_view_item_distance_from_the_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/meters"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_restaurant_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_list_view_item_number_of_person_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/x"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_view_item_restaurant_picture"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_view_item_distance_from_the_restaurant" />

</androidx.constraintlayout.widget.ConstraintLayout>