<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@drawable/nav_drawer_header">

    <ImageView
        android:id="@+id/activity_main_nav_drawer_header_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_drawer_header_picture"
        tools:layout_editor_absoluteY="25dp" />

    <ImageView
        android:id="@+id/activity_main_nav_drawer_user_profile_picture"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/user_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_no_profile_image" />

<!--    <TextView-->
<!--        android:id="@+id/activity_main_nav_drawer_first_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:text="@string/first_name"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/activity_main_nav_drawer_email_address"-->
<!--        app:layout_constraintStart_toEndOf="@+id/activity_main_nav_drawer_user_profile_picture" />-->

    <TextView
        android:id="@+id/activity_main_nav_drawer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_nav_drawer_email_address"
        app:layout_constraintStart_toEndOf="@+id/activity_main_nav_drawer_user_profile_picture" />

    <TextView
        android:id="@+id/activity_main_nav_drawer_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/e_mail"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_nav_drawer_user_profile_picture"
        app:layout_constraintStart_toEndOf="@+id/activity_main_nav_drawer_user_profile_picture" />

    <TextView
        android:id="@+id/activity_main_nav_drawer_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go4lunch_title"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_main_nav_drawer_header_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>