<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_restaurant_details_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_restaurant_details_informations_bloc"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_picture" />

    <TextView
        android:id="@+id/activity_restaurant_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/activity_restaurant_details_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_restaurant_details_informations_bloc" />

    <TextView
        android:id="@+id/activity_restaurant_details_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/origin"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/activity_restaurant_details_name"
        app:layout_constraintTop_toTopOf="@+id/activity_restaurant_details_informations_bloc" />

    <TextView
        android:id="@+id/activity_restaurant_details_restaurant_linker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" restaurant - "
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_details_origin"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_origin" />

    <TextView
        android:id="@+id/activity_restaurant_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_details_origin"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_restaurant_linker" />

    <ImageView
        android:id="@+id/activity_restaurant_details_star_1"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_details_name"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_name" />

    <ImageView
        android:id="@+id/activity_restaurant_details_star_2"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_details_star_1"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_star_1"
        tools:layout_editor_absoluteY="260dp" />

    <ImageView
        android:id="@+id/activity_restaurant_details_star_3"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_details_star_1"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_star_2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_restaurant_details_participation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_check"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_details_picture"
        app:layout_constraintTop_toTopOf="@+id/activity_restaurant_details_picture" />

    <ImageView
        android:id="@+id/activity_restaurant_details_call_logo"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_informations_bloc" />

    <ImageView
        android:id="@+id/activity_restaurant_details_like_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_star_orange"
        app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_details_web_logo"
        app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_call_logo"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_informations_bloc" />


    <ImageView
        android:id="@+id/activity_restaurant_details_web_logo"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_informations_bloc" />

    <TextView
        android:id="@+id/activity_restaurant_details_call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_details_call_logo"
        app:layout_constraintStart_toStartOf="@+id/activity_restaurant_details_call_logo"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_like_logo" />

    <TextView
        android:id="@+id/activity_restaurant_details_like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_details_like_logo"
        app:layout_constraintStart_toStartOf="@+id/activity_restaurant_details_like_logo"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_like_logo" />

    <TextView
        android:id="@+id/activity_restaurant_details_website_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_details_web_logo"
        app:layout_constraintStart_toStartOf="@+id/activity_restaurant_details_web_logo"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_like_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_restaurant_details_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_like_text"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>